全台氣溫圖新增生活品質建議，及增加actionbar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/relativeLayout">
 
         <TextView
-            android:id="@+id/tvDes"
+            android:id="@+id/tvHumidity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="地址:"
