--- a/app/src/main/res/layout/fragment_aqi.xml
+++ b/app/src/main/res/layout/fragment_aqi.xml
@@ -32,8 +32,8 @@
             android:text="空氣指標\nAQI"
             android:textSize="30sp"
             android:layout_alignParentTop="true"
-            android:layout_alignRight="@+id/tvDes"
-            android:layout_alignEnd="@+id/tvDes" />
+            android:layout_alignRight="@+id/tvHumidity"
+            android:layout_alignEnd="@+id/tvHumidity" />
 
         <RelativeLayout
             android:id="@+id/AQIrelativeLayout"
@@ -58,7 +58,7 @@
                 android:textSize="20dp" />
         </RelativeLayout>
         <TextView
-            android:id="@+id/tvDes"
+            android:id="@+id/tvHumidity"
             android:layout_width="330dp"
             android:layout_height="100dp"
             android:layout_weight="1"
@@ -77,9 +77,9 @@
             android:id="@+id/tvNormalsuggest"
             android:layout_width="330dp"
             android:layout_height="140dp"
-            android:layout_alignLeft="@+id/tvDes"
-            android:layout_alignStart="@+id/tvDes"
-            android:layout_below="@+id/tvDes"
+            android:layout_alignLeft="@+id/tvHumidity"
+            android:layout_alignStart="@+id/tvHumidity"
+            android:layout_below="@+id/tvHumidity"
             android:layout_marginTop="12dp"
             android:layout_weight="1"
             android:background="@drawable/bg_round_rect"
