--- a/app/src/main/res/layout/activity_temperature.xml
+++ b/app/src/main/res/layout/activity_temperature.xml
@@ -4,7 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TemperatureActivity"
-    android:background="@drawable/bg_fragment_5">
+    android:background="#fff">
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/appBarLayout"
+        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark">
+        <android.support.v7.widget.Toolbar
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/app_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/my_toolbar"
+            android:fitsSystemWindows="true"
+            />
+
+    </android.support.design.widget.AppBarLayout>
 
     <WebView
         android:id="@+id/webView"
@@ -12,14 +27,24 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/appBarLayout"
+        android:layout_marginTop="15dp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
-    <FrameLayout
-        android:id="@+id/main_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:id="@+id/tvHumidity"
+        android:layout_width="330dp"
+        android:layout_height="180dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="13dp"
+        android:layout_weight="1"
+        android:background="@drawable/bg_round_rect"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:text="一般民眾活動建議:\n\n任何人如果有不適，如眼痛，咳嗽或喉嚨痛等，應該考慮減少戶外活動。"
+        android:textColor="#222123"
+        android:textStyle="bold" />
 </RelativeLayout>
