--- a/app/src/main/res/layout/activity_pm25.xml
+++ b/app/src/main/res/layout/activity_pm25.xml
@@ -12,10 +12,19 @@
         android:id="@+id/webView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"
-        android:layout_below="@+id/imageView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/imageView"
+        android:layout_marginTop="45dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
+
+    <ImageView
+        android:id="@+id/ivBack"
+        android:layout_width="wrap_content"
+        android:layout_height="23dp"
+        android:layout_margin="9dp"
+        android:onClick="onBack"
+        app:srcCompat="@mipmap/back3" />
 
 </RelativeLayout>
